reference/5.1/PowershellGet/Uninstall-Module.md
---
external help file: PSModule-help.xml
Locale: en-US
Module Name: PowerShellGet
ms.date: 12/09/2022
online version: https://learn.microsoft.com/powershell/module/powershellget/uninstall-module?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Uninstall-Module
---

# Uninstall-Module

## SYNOPSIS
Uninstalls a module.

## SYNTAX

### NameParameterSet (Default)

```
Uninstall-Module [-Name] <String[]> [-MinimumVersion <String>] [-RequiredVersion <String>]
 [-MaximumVersion <String>] [-AllVersions] [-Force] [-AllowPrerelease] [-WhatIf] [-Confirm]
 [<CommonParameters>]
```

### InputObject

```
Uninstall-Module [-InputObject] <PSObject[]> [-Force] [-WhatIf] [-Confirm] [<CommonParameters>]
```

## DESCRIPTION

The `Uninstall-Module` cmdlet uninstalls a specified module from the local computer. You can't
uninstall a module if other modules depend on it or the module wasn't installed with the
`Install-Module` cmdlet.

You can manually delete module files, but doing so may break any modules that depend on the deleted
module.

The parameters that take module version numbers expect strings formatted as version numbers.

- Standard version numbers have a format of `x.y.z` where x, y, and z are numbers
- Prerelease versions have a format of `x.y.z-<prerelease_label>` where the `<prerelease_label>` is
  arbitrary string assigned to that release.

## EXAMPLES

### Example 1: Uninstall a module

This example uninstalls a module.

```powershell
Uninstall-Module -Name SpeculationControl
```

`Uninstall-Module` uses the **Name** parameter to specify the module to uninstall from the local
computer.

### Example 2: Use the pipeline to uninstall a module

In this example, the pipeline is used to uninstall a module.

```powershell
Get-InstalledModule -Name SpeculationControl | Uninstall-Module
```

`Get-InstalledModule` uses the **Name** parameter to specify the module. The object is sent down the
pipeline to `Uninstall-Module` and is uninstalled.

## PARAMETERS

### -AllowPrerelease

Allows you to uninstall a module marked as a prerelease.

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: NameParameterSet
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AllVersions

Specifies that you want to include all available versions of a module. You can't use the
**AllVersions** parameter with the **MinimumVersion**, **MaximumVersion**, or **RequiredVersion**
parameters.

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: NameParameterSet
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Force

Forces `Uninstall-Module` to run without asking for user confirmation.

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -InputObject

Accepts a **PSRepositoryItemInfo** object. For example, output `Get-InstalledModule` to a variable
and use that variable as the **InputObject** argument.

```yaml
Type: System.Management.Automation.PSObject[]
Parameter Sets: InputObject
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### -MaximumVersion

Specifies the maximum, or newest, version of the module to uninstall. The **MaximumVersion** and
**RequiredVersion** parameters can't be used in the same command.

```yaml
Type: System.String
Parameter Sets: NameParameterSet
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -MinimumVersion

Specifies the minimum version of the module to uninstall. The **MinimumVersion** and
**RequiredVersion** parameters can't be used in the same command.

```yaml
Type: System.String
Parameter Sets: NameParameterSet
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Name

Specifies an array of module names to uninstall.

```yaml
Type: System.String[]
Parameter Sets: NameParameterSet
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -RequiredVersion

Specifies the exact version number of the module to uninstall.

```yaml
Type: System.String
Parameter Sets: NameParameterSet
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Confirm

Prompts you for confirmation before running the `Uninstall-Module`.

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf

Shows what would happen if `Uninstall-Module` runs. The cmdlet isn't run.

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable,
-InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose,
-WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### PSRepositoryItemInfo

`Uninstall-Module` accepts **PSRepositoryItemInfo** objects from the pipeline.

## OUTPUTS

## NOTES

## RELATED LINKS

[Find-Module](Find-Module.md)

[Get-InstalledModule](Get-InstalledModule.md)

[Publish-Module](Publish-Module.md)

[Save-Module](Save-Module.md)

[Update-Module](Update-Module.md)
